Configuração do ambiente dev e prod. Dev com banco H2 em arquivo
Signed-off-by: Erinaldo Henrique <hencomjesus@hotmail.com>